Version 1.3.0
-----------------------------------------------------------------
3 April 2009
+ Added extra 1 thru 3 to sheet and peeps for extra questions
+ Updated: templates/applicants.tpl, templates/edit_peep.tpl,
templates/peeps.tpl, templates/signup_form.tpl

Version 1.2.2
-----------------------------------------------------------------
4 February 2009
+ Fixed url sent to key.

Version 1.2.1
-----------------------------------------------------------------
12 December 2008
+ Removed reference symbols
+ Added dngettext for "openings(s)" translation
+ Rewrote getAllSlots. The slots filled number wasn't joining
  properly.
+ Fixed sheet view link.

Version 1.2.0
-----------------------------------------------------------------
14 July 2008
+ Fixed: signup errors reseting slot pick
+ Removed redundant error message
+ previous register fix would not list empty slots.
+ Removed string length on phone number

9 July 2008
+ Only pulling registered users for slots open.

Version 1.1.2
-----------------------------------------------------------------
2 July 2008
+ Install.sql missing new column. Trying again in update.

30 June 2008
+ Removed the phone number parsing. Got in the way of extensions and
  the like.

Version 1.1.1
-----------------------------------------------------------------
6 June 2008
+ Added js_calendar to signup sheet expiration

21 April 2008
+ Added missing navigation links to sheet listing.
+ Updated: templates/sheet_list.tpl

18 April 2008
+ Added search textfield to slot screen.
+ updated : templates/slot_setup.tpl

10 April 2008
+ Restricted users cannot create signup sheets.

Version 1.1.0
------------------------------------------------------------------
18 March 2008
+ Closing popup windows refreshes the parent now in case where an
  update may be needed.
+ Signup sheets were not saving their key ids properly.
+ Added ability for a sheet to allow multiple signups.
+ Fixed add applicant.
+ Updated: templates/edit_sheet.tpl

7 March 2008