@@ -1,3 +1,6 @@
+11 August 2009
++ Fixed incorrect counting of people in slots.
+
 Version 1.3.0
 -----------------------------------------------------------------
 3 April 2009
